# life-manager

./: .gitignore  AGENTS.md  README.md  grist_api.py  main.py  pyproject.toml  query_grist.py  query_grist_readme.md  settings.py  sync_todoist_to_grist.py
docs/: grist-api-guide.md
