[project]
name = "life-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "typer>=0.15",
]

[dependency-groups]
dev = [
    "ty>=0.0.46",
    "ruff>=0.15",
    "pre-commit>=4.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true

[tool.ruff.lint.per-file-ignores]
"*grist*.py" = ["B008"]
